{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 13,
  "lineage": "cf9ac446-36ea-e772-c4de-9c56cbdeece0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "project03_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "project03_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03dd235e4eaf8ef36",
            "domain": "vpc",
            "id": "eipalloc-03dd235e4eaf8ef36",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-43-202-138-81.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.202.138.81",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.project03_igw",
            "aws_vpc.project03_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project03_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:257307634175:internet-gateway/igw-04aa1747b6b694596",
            "id": "igw-04aa1747b6b694596",
            "owner_id": "257307634175",
            "tags": {
              "Name": "project03_igw"
            },
            "tags_all": {
              "Name": "project03_igw"
            },
            "vpc_id": "vpc-06d9d3493dd83184d"
          },
          "dependencies": [
            "aws_vpc.project03_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "project03_nat_public1_ap_northeast_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03dd235e4eaf8ef36",
            "association_id": "eipassoc-01292528a5856398d",
            "connectivity_type": "public",
            "id": "nat-0c94560d9cbd43399",
            "network_interface_id": "eni-0353895f6ee48496f",
            "private_ip": "10.3.9.150",
            "public_ip": "43.202.138.81",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03dd8007262ffd386"
          },
          "dependencies": [
            "aws_eip.project03_eip",
            "aws_internet_gateway.project03_igw",
            "aws_subnet.project03_subnet_public1_ap_northeast_2a",
            "aws_vpc.project03_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "project03_private_rt_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bf840e1085e6b4a91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c94560d9cbd43399",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bf840e1085e6b4a9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.project03_eip",
            "aws_internet_gateway.project03_igw",
            "aws_nat_gateway.project03_nat_public1_ap_northeast_2a",
            "aws_route_table.project03_private_rt",
            "aws_subnet.project03_subnet_public1_ap_northeast_2a",
            "aws_vpc.project03_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "project03_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:257307634175:route-table/rtb-0bf840e1085e6b4a9",
            "id": "rtb-0bf840e1085e6b4a9",
            "owner_id": "257307634175",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "project03 private route table"
            },
            "tags_all": {
              "Name": "project03 private route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d9d3493dd83184d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project03_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "project03-public_rta_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "project03_private_rta_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0497874c2d75eedba",
            "route_table_id": "rtb-0bf840e1085e6b4a9",
            "subnet_id": "subnet-0d0c3014f8cfb1a19"
          },
          "dependencies": [
            "aws_route_table.project03_private_rt",
            "aws_subnet.project03_subnet_private1_ap_northeast_2a",
            "aws_vpc.project03_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "project03_private_rta_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc9380fb69e43a21",
            "route_table_id": "rtb-0bf840e1085e6b4a9",
            "subnet_id": "subnet-03220c705d4cd45be"
          },
          "dependencies": [
            "aws_route_table.project03_private_rt",
            "aws_subnet.project03_subnet_private1_ap_northeast_2c",
            "aws_vpc.project03_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "project03_public_rta_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project03_subnet_private1_ap_northeast_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:257307634175:subnet/subnet-0d0c3014f8cfb1a19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.3.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0c3014f8cfb1a19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "257307634175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project03_subnet_private1_ap_northeast_2a"
            },
            "tags_all": {
              "Name": "project03_subnet_private1_ap_northeast_2a"
            },
            "vpc_id": "vpc-06d9d3493dd83184d"
          },
          "dependencies": [
            "aws_vpc.project03_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project03_subnet_private1_ap_northeast_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:257307634175:subnet/subnet-03220c705d4cd45be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.3.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03220c705d4cd45be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "257307634175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project03_subnet_private1_ap_northeast_2c"
            },
            "tags_all": {
              "Name": "project03_subnet_private1_ap_northeast_2c"
            },
            "vpc_id": "vpc-06d9d3493dd83184d"
          },
          "dependencies": [
            "aws_vpc.project03_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project03_subnet_public1_ap_northeast_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:257307634175:subnet/subnet-03dd8007262ffd386",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.3.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03dd8007262ffd386",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "257307634175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project03_subnet_public1_ap_northeast_2a"
            },
            "tags_all": {
              "Name": "project03_subnet_public1_ap_northeast_2a"
            },
            "vpc_id": "vpc-06d9d3493dd83184d"
          },
          "dependencies": [
            "aws_vpc.project03_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project03_subnet_public1_ap_northeast_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:257307634175:subnet/subnet-0a7dee5a598bb8621",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.3.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7dee5a598bb8621",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "257307634175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project03_subnet_public1_ap_northeast_2c"
            },
            "tags_all": {
              "Name": "project03_subnet_public1_ap_northeast_2c"
            },
            "vpc_id": "vpc-06d9d3493dd83184d"
          },
          "dependencies": [
            "aws_vpc.project03_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project03_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:257307634175:vpc/vpc-06d9d3493dd83184d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.3.0.0/16",
            "default_network_acl_id": "acl-079ed93615c35b94b",
            "default_route_table_id": "rtb-0c1793acfc4df5920",
            "default_security_group_id": "sg-02613fef1faeb6aa5",
            "dhcp_options_id": "dopt-001f154f20bc98f0f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06d9d3493dd83184d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c1793acfc4df5920",
            "owner_id": "257307634175",
            "tags": {
              "Name": "project03_vpc"
            },
            "tags_all": {
              "Name": "project03_vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}